# c_data_structs

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  cmake-windows.yml
include/: allocate.h  command_runner.h  mish.h  vector.h
include/tests/: vector_tests.h
src/: allocate.c  command_runner.c  main.c  mish.c  vector.c
tests/: vector_tests.c
